Source/JavaScriptCore/dfg/DFGWorklist.cpp
@@ -530,12 +530,38 @@ unsigned Worklist::setNumberOfThreads(unsigned numberOfThreads, int relativePrio
 }
 
 static Worklist* theGlobalDFGWorklist;
+static unsigned numberOfDFGCompilerThreads;
+static unsigned numberOfFTLCompilerThreads;
+
+static unsigned getNumberOfDFGCompilerThreads()
+{
+    return numberOfDFGCompilerThreads ?: Options::numberOfDFGCompilerThreads();
+}
+
+static unsigned getNumberOfFTLCompilerThreads()
+{
+    return numberOfFTLCompilerThreads ?: Options::numberOfFTLCompilerThreads();
+}
+
+unsigned setNumberOfDFGCompilerThreads(unsigned numberOfThreads)
+{
+    auto previousNumberOfThreads = getNumberOfDFGCompilerThreads();
+    numberOfDFGCompilerThreads = numberOfThreads;
+    return previousNumberOfThreads;
+}
+
+unsigned setNumberOfFTLCompilerThreads(unsigned numberOfThreads)
+{
+    auto previousNumberOfThreads = getNumberOfFTLCompilerThreads();
+    numberOfFTLCompilerThreads = numberOfThreads;
+    return previousNumberOfThreads;
+}
 
 Worklist& ensureGlobalDFGWorklist()
 {
     static std::once_flag initializeGlobalWorklistOnceFlag;
     std::call_once(initializeGlobalWorklistOnceFlag, [] {
-        theGlobalDFGWorklist = &Worklist::create("DFG Worklist", Options::numberOfDFGCompilerThreads(), Options::priorityDeltaOfDFGCompilerThreads()).leakRef();
+        theGlobalDFGWorklist = &Worklist::create("DFG Worklist", getNumberOfDFGCompilerThreads(), Options::priorityDeltaOfDFGCompilerThreads()).leakRef();
     });
     return *theGlobalDFGWorklist;
 }
@@ -551,7 +577,7 @@ Worklist& ensureGlobalFTLWorklist()
 {
     static std::once_flag initializeGlobalWorklistOnceFlag;
     std::call_once(initializeGlobalWorklistOnceFlag, [] {
-        theGlobalFTLWorklist = &Worklist::create("FTL Worklist", Options::numberOfFTLCompilerThreads(), Options::priorityDeltaOfFTLCompilerThreads()).leakRef();
+        theGlobalFTLWorklist = &Worklist::create("FTL Worklist", getNumberOfFTLCompilerThreads(), Options::priorityDeltaOfFTLCompilerThreads()).leakRef();
     });
     return *theGlobalFTLWorklist;
 }
