Source/JavaScriptCore/API/tests/testapi.mm
@@ -554,10 +554,7 @@ static void runJITThreadLimitTests()
 
 static void testObjectiveCAPIMain()
 {
-    // FIXME: Make this work again.
-    // https://bugs.webkit.org/show_bug.cgi?id=187886
-    if (false)
-        runJITThreadLimitTests();
+    runJITThreadLimitTests();
 
     @autoreleasepool {
         JSVirtualMachine* vm = [[JSVirtualMachine alloc] init];
